[gd_scene load_steps=5 format=2]

[ext_resource path="res://SpikeTrap.gd" type="Script" id=1]
[ext_resource path="res://Art/SpikeTrap/spike A.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 23 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29, 13 )

[node name="SpikeTrap" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -2.08395, 3.31094 )
scale = Vector2( 0.252075, 0.183709 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.87484, 3.05394 )
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 0, -7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -1.5, 20 )
shape = SubResource( 2 )

[node name="Attack Again" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_SpikeTrap_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_SpikeTrap_body_exited"]
[connection signal="timeout" from="Attack Again" to="." method="_on_Attack_Again_timeout"]
